examples/test/testpolicy18159.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18159
  namespace: namespace31
spec:
  podSelector:
    matchLabels:
      key14: value11
      key43: value11
      key6: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key0: value42
      podSelector:
        matchLabels:
          key42: value8
